fix(docker): ajusta diretório de trabalho e configura PYTHONPATH para resolver problemas de importação
- Alterado o diretório de trabalho no Dockerfile para '/app' em vez de '/app/src'.
- Adicionada a variável de ambiente PYTHONPATH para garantir que o Python encontre o diretório 'src' corretamente.
- Corrigida a execução do script principal 'main.py' no container, garantindo que os módulos sejam localizados corretamente.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - DATABASE_HOST=mysql
       - DATABASE_PORT=3306
-      - DATABASE_NAME=back
+      - DATABASE_NAME=teste
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=root
     ports:
@@ -19,12 +19,11 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql_db
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: back
-      MYSQL_USER: root
+      MYSQL_DATABASE: teste
       MYSQL_PASSWORD: root
+      MYSQL_USER: root
     ports:
       - "3307:3306"
     volumes:
